add cloudflared code

--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,14 @@ base {
 }
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+	maven {
+		name = "github"
+		url = "https://maven.pkg.github.com/pufferffish/capnproto-java-rpc/"
+		credentials { // you need a github token with read:packages scope
+			username = "$github_user"
+			password = "$github_token"
+		}
+	}
 }
 
 loom {
@@ -38,6 +41,10 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	implementation "org.capnproto:runtime-rpc:0.1.16-SNAPSHOT"
+	implementation "com.twitter:hpack:1.0.2"
+	include "org.capnproto:runtime-rpc:0.1.16-SNAPSHOT"
+	include "com.twitter:hpack:1.0.2"
 	
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
