--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,8 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	implementation "org.capnproto:runtime-rpc:0.1.16-SNAPSHOT"
 	implementation "com.twitter:hpack:1.0.2"
-	include "org.capnproto:runtime-rpc:0.1.16-SNAPSHOT"
-	include "com.twitter:hpack:1.0.2"
+	modApi include("org.capnproto:runtime-rpc:0.1.16-SNAPSHOT")
+	modApi include("com.twitter:hpack:1.0.2")
 	
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
