--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ mod_issues=https://github.com/pufferffish/wanparty/issues
 manifold_version=2023.1.29
 
 # Minecraft related libaries (included in MC's jar)
+nightconfig_version=3.6.6
 log4j_version=2.20.0
 netty_version=4.1.94.Final
 
