--- a/versionProperties/1.16.5.properties
+++ b/versionProperties/1.16.5.properties
@@ -11,42 +11,9 @@ fabric_loader_version=0.14.24
 fabric_api_version=0.42.0+1.16
     # Fabric mod versions
     modmenu_version=1.16.22
-    starlight_version_fabric=
-    phosphor_version_fabric=
-    lithium_version=mc1.16.5-0.6.6
-    sodium_version=mc1.16.5-0.2.0
-    iris_version=1.4.4+1.16.5
-    bclib_version=
-    immersive_portals_version=
-    canvas_version=
 
     fabric_incompatibility_list={ }
-    fabric_recommend_list={ "indium": "*" }
-
-    # Fabric mod run
-    # 0 = Don't enable and don't run
-    # 1 = Can be referenced in code but doesn't run
-    # 2 = Can be referenced in code and runs in client
-    enable_starlight=0
-    enable_phosphor=0
-    enable_lithium=0
-    enable_sodium=1
-    enable_iris=1
-    # not available via github, use curse.maven if necessary
-    enable_bclib=0
-    enable_immersive_portals=0
-    enable_canvas=0
+    fabric_recommend_list={  }
 
 # Forge loader
 forge_version=36.2.39
-    # Forge mod versions
-    starlight_version_forge=
-    terraforged_version=4044290
-
-    # Forge mod run
-    # 0 = Don't enable and don't run
-    # 1 = Can be referenced in code but doesn't run
-    # 2 = Can be referenced in code and runs in client
-    enable_starlight_forge=0
-    enable_terraforged=1
-    enable_terrafirmacraft=0
