--- a/versionProperties/1.17.1.properties
+++ b/versionProperties/1.17.1.properties
@@ -11,41 +11,9 @@ fabric_loader_version=0.14.24
 fabric_api_version=0.46.1+1.17
     # Fabric mod versions
     modmenu_version=2.0.17
-    starlight_version_fabric=
-    phosphor_version_fabric=
-    lithium_version=
-    sodium_version=mc1.17.1-0.3.4
-    iris_version=1.17.x-v1.2.7
-    bclib_version=0.5.6
-    immersive_portals_version=
-    canvas_version=
 
     fabric_incompatibility_list={ }
-    fabric_recommend_list={ "indium": "*" }
-
-    # Fabric mod run
-    # 0 = Don't enable and don't run
-    # 1 = Can be referenced in code but doesn't run
-    # 2 = Can be referenced in code and runs in client
-    enable_starlight=0
-    enable_phosphor=0
-    enable_lithium=0
-    enable_sodium=1
-    enable_iris=0
-    enable_bclib=1
-    enable_immersive_portals=0
-    enable_canvas=0
+    fabric_recommend_list={  }
 
 # Forge loader
 forge_version=37.1.1
-    # Forge mod versions
-    starlight_version_forge=3457784
-    terraforged_version=
-
-    # Forge mod run
-    # 0 = Don't enable and don't run
-    # 1 = Can be referenced in code but doesn't run
-    # 2 = Can be referenced in code and runs in client
-    enable_starlight_forge=0
-    enable_terraforged=0
-    enable_terrafirmacraft=0
