--- a/versionProperties/1.20.1.properties
+++ b/versionProperties/1.20.1.properties
@@ -11,41 +11,9 @@ fabric_loader_version=0.14.24
 fabric_api_version=0.90.4+1.20.1
     # Fabric mod versions
     modmenu_version=7.2.2
-    starlight_version_fabric=
-    phosphor_version_fabric=
-    lithium_version=
-    sodium_version=mc1.20.1-0.5.3
-    iris_version=1.6.10+1.20.1
-    bclib_version=3.0.12
-    immersive_portals_version=
-    canvas_version=
-    
+
     fabric_incompatibility_list={ }
-    fabric_recommend_list={ "indium": "*" }
-    
-    # Fabric mod run
-    # 0 = Don't enable and don't run
-    # 1 = Can be referenced in code but doesn't run
-    # 2 = Can be referenced in code and runs in client
-    enable_starlight=0
-    enable_phosphor=0
-    enable_sodium=1
-    enable_lithium=0
-    enable_iris=1
-    enable_bclib=1
-    enable_immersive_portals=0
-    enable_canvas=0
+    fabric_recommend_list={  }
 
 # Forge loader
 forge_version=47.2.1
-    # Forge mod versions
-    starlight_version_forge=
-    terraforged_version=
-
-    # Forge mod run
-    # 0 = Don't enable and don't run
-    # 1 = Can be referenced in code but doesn't run
-    # 2 = Can be referenced in code and runs in client
-    enable_starlight_forge=0
-    enable_terraforged=0
-    enable_terrafirmacraft=0
