--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,8 @@ manifold_version=2023.1.29
 nightconfig_version=3.6.6
 log4j_version=2.20.0
 netty_version=4.1.94.Final
+capnproto_version=0.1.16-SNAPSHOT
+hpack_version=1.0.2
 
 # These are here so they can be changed with cmd arguments
 # If they are null, they would be automatically set
