--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "fabric-loom" version "1.1.+"
+    id "fabric-loom" version "1.5.+"
 }
 
 loom {
@@ -23,7 +23,7 @@ loom {
 remapJar {
     inputFile = shadowJar.archiveFile
     dependsOn shadowJar
-    classifier null
+//    classifier null
 }
 
 configurations {
